Fix #596: Correct runinhead.default.title.end.punct
Julia reported, that zh-cn/zh-tw does not need the
additional space between the formalpara/title and
the next para.

English and other languages, contains now the punctuation
and the non-breakable space.

--- a/suse2022-ns/common/l10n/en.xml
+++ b/suse2022-ns/common/l10n/en.xml
@@ -25,7 +25,7 @@
    <l:gentext key="showcontentsoverview" text="Show Contents"/>
    <l:gentext key="find" text="Find"/>
 
-   <l:gentext key="runinhead.default.title.end.punct" text="."/>
+  <l:gentext key="runinhead.default.title.end.punct" text=".&#x00a0;"/>
 
    <l:gentext key="navigation" text="Navigation"/>
    <l:gentext key="moredocuments" text="More documents"/>
