--- a/suse2022-ns/common/l10n/ar.xml
+++ b/suse2022-ns/common/l10n/ar.xml
@@ -26,7 +26,7 @@ translators apparently want those. - sknorr, 2016-09-30 -->
    <l:gentext key="showcontentsoverview" text="ﻉﺮﺿ ﺎﻠﻤﺤﺗﻮﻳﺎﺗ" />
    <l:gentext key="find" text="ﺐﺤﺛ" />
 
-   <l:gentext key="runinhead.default.title.end.punct" text="."/>
+   <l:gentext key="runinhead.default.title.end.punct" text=".&#x00a0;"/>
 
    <l:gentext key="navigation" text="التنقل"/>
    <l:gentext key="moredocuments" text="المزيد من المستندات"/>
