--- a/suse2022-ns/common/l10n/cs.xml
+++ b/suse2022-ns/common/l10n/cs.xml
@@ -23,7 +23,7 @@
    <l:gentext key="showcontentsoverview" text="Zobrazit obsah"/>
    <l:gentext key="find" text="Najít"/>
 
-   <l:gentext key="runinhead.default.title.end.punct" text="."/>
+   <l:gentext key="runinhead.default.title.end.punct" text=".&#x00a0;"/>
 
    <l:gentext key="navigation" text="Navigace"/>
    <l:gentext key="moredocuments" text="Více dokumentů"/>
