--- a/suse2022-ns/common/l10n/da.xml
+++ b/suse2022-ns/common/l10n/da.xml
@@ -26,7 +26,7 @@
    <l:gentext key="showcontentsoverview" text="Vis indhold"/>
    <l:gentext key="find" text="Find"/>
 
-   <l:gentext key="runinhead.default.title.end.punct" text="."/>
+   <l:gentext key="runinhead.default.title.end.punct" text=".&#x00a0;"/>
 
    <l:gentext key="navigation" text="Navigation"/>
    <l:gentext key="moredocuments" text="Flere dokumenter"/>
