--- a/suse2022-ns/common/l10n/de.xml
+++ b/suse2022-ns/common/l10n/de.xml
@@ -25,7 +25,7 @@
    <l:gentext key="showcontentsoverview" text="Inhalt anzeigen"/>
    <l:gentext key="find" text="Suchen"/>
 
-   <l:gentext key="runinhead.default.title.end.punct" text="."/>
+  <l:gentext key="runinhead.default.title.end.punct" text=".&#x00a0;"/>
 
    <l:gentext key="navigation" text="Navigation" />
    <l:gentext key="moredocuments" text="Weitere Dokumente" />
