--- a/suse2022-ns/common/l10n/fi.xml
+++ b/suse2022-ns/common/l10n/fi.xml
@@ -24,7 +24,7 @@
    <l:gentext key="showcontentsoverview" text="Näytä sisältö"/>
    <l:gentext key="find" text="Etsi"/>
 
-   <l:gentext key="runinhead.default.title.end.punct" text="."/>
+   <l:gentext key="runinhead.default.title.end.punct" text=".&#x00a0;"/>
 
    <l:gentext key="navigation" text="Siirtyminen"/>
    <l:gentext key="moredocuments" text="Lisää asiakirjoja"/>
