--- a/suse2022-ns/common/l10n/hu.xml
+++ b/suse2022-ns/common/l10n/hu.xml
@@ -30,7 +30,7 @@
    <l:gentext key="showcontentsoverview" text="Tartalom megjelenítése"/>
    <l:gentext key="find" text="Keresés"/>
 
-   <l:gentext key="runinhead.default.title.end.punct" text="."/>
+   <l:gentext key="runinhead.default.title.end.punct" text=".&#x00a0;"/>
 
    <l:gentext key="navigation" text="Navigáció" />
    <l:gentext key="moredocuments" text="Több dokumentum" />
