--- a/suse2022-ns/common/l10n/ja.xml
+++ b/suse2022-ns/common/l10n/ja.xml
@@ -25,7 +25,7 @@
    <l:gentext key="showcontentsoverview" text="目次を表示" />
    <l:gentext key="find" text="検索"/>
 
-   <l:gentext key="runinhead.default.title.end.punct" text="." />
+   <l:gentext key="runinhead.default.title.end.punct" text=".&#x00a0;" />
 
    <l:gentext key="navigation" text="ナビゲーション"/>
    <l:gentext key="moredocuments" text="その他のドキュメント" />
