--- a/suse2022-ns/common/l10n/ko.xml
+++ b/suse2022-ns/common/l10n/ko.xml
@@ -28,7 +28,7 @@
    <l:gentext key="showcontentsoverview" text="목차 표시"/>
    <l:gentext key="find" text="찾기"/>
 
-   <l:gentext key="runinhead.default.title.end.punct" text="."/>
+   <l:gentext key="runinhead.default.title.end.punct" text=".&#x00a0;"/>
 
    <l:gentext key="navigation" text="탐색"/>
    <l:gentext key="moredocuments" text="문서 더 보기" />
