--- a/suse2022-ns/common/l10n/lt_lt.xml
+++ b/suse2022-ns/common/l10n/lt_lt.xml
@@ -25,7 +25,7 @@
    <l:gentext key="showcontentsoverview" text="Rodyti turinį"/>
    <l:gentext key="find" text="Rasti"/>
 
-   <l:gentext key="runinhead.default.title.end.punct" text="."/>
+   <l:gentext key="runinhead.default.title.end.punct" text=".&#x00a0;"/>
 
    <l:gentext key="navigation" text="Naršymas"/>
    <l:gentext key="moredocuments" text="More documents"/>
