--- a/suse2022-ns/common/l10n/nl.xml
+++ b/suse2022-ns/common/l10n/nl.xml
@@ -28,7 +28,7 @@
    <l:gentext key="showcontentsoverview" text="Inhoud weergeven"/>
    <l:gentext key="find" text="Zoeken"/>
 
-   <l:gentext key="runinhead.default.title.end.punct" text="."/>
+   <l:gentext key="runinhead.default.title.end.punct" text=".&#x00a0;"/>
 
    <l:gentext key="navigation" text="Navigatie"/>
    <l:gentext key="moredocuments" text="More documents"/>
