--- a/suse2022-ns/common/l10n/no.xml
+++ b/suse2022-ns/common/l10n/no.xml
@@ -24,7 +24,7 @@
    <l:gentext key="showcontentsoverview" text="Vis innhold"/>
    <l:gentext key="find" text="Søk"/>
 
-   <l:gentext key="runinhead.default.title.end.punct" text="."/>
+   <l:gentext key="runinhead.default.title.end.punct" text=".&#x00a0;"/>
 
    <l:gentext key="navigation" text="Navigasjon"/>
    <l:gentext key="moredocuments" text="More documents"/>
