--- a/suse2022-ns/common/l10n/pl.xml
+++ b/suse2022-ns/common/l10n/pl.xml
@@ -24,7 +24,7 @@
    <l:gentext key="showcontentsoverview" text="Pokaż treść" />
    <l:gentext key="find" text="Znajdź"/>
 
-   <l:gentext key="runinhead.default.title.end.punct" text="."/>
+   <l:gentext key="runinhead.default.title.end.punct" text=".&#x00a0;"/>
 
    <l:gentext key="navigation" text="Nawigacja"/>
    <l:gentext key="moredocuments" text="Więcej dokumentów" />
