--- a/suse2022-ns/common/l10n/pt_br.xml
+++ b/suse2022-ns/common/l10n/pt_br.xml
@@ -25,7 +25,7 @@
    <l:gentext key="showcontentsoverview" text="Mostrar Conteúdo"/>
    <l:gentext key="find" text="Encontrar" />
 
-   <l:gentext key="runinhead.default.title.end.punct" text="."/>
+   <l:gentext key="runinhead.default.title.end.punct" text=".&#x00a0;"/>
 
    <l:gentext key="navigation" text="Navegação"/>
    <l:gentext key="moredocuments" text="Mais documentos" />
