--- a/suse2022-ns/common/l10n/sv.xml
+++ b/suse2022-ns/common/l10n/sv.xml
@@ -32,7 +32,7 @@
    <l:gentext key="showcontentsoverview" text="Visa innehåll"/>
    <l:gentext key="find" text="Hitta"/>
 
-   <l:gentext key="runinhead.default.title.end.punct" text="."/>
+   <l:gentext key="runinhead.default.title.end.punct" text=".&#x00a0;"/>
 
    <l:gentext key="navigation" text="Navigering"/>
    <l:gentext key="sharethispage" text="Dela den här sidan"/>
