--- a/suse2022-ns/common/l10n/zh_cn.xml
+++ b/suse2022-ns/common/l10n/zh_cn.xml
@@ -25,7 +25,7 @@
   <l:gentext key="showcontentsoverview" text="显示目录" />
   <l:gentext key="find" text="查找" />
 
-  <l:gentext key="runinhead.default.title.end.punct" text="." />
+  <l:gentext key="runinhead.default.title.end.punct" text="&#xff1a;" />
 
   <l:gentext key="navigation" text="导航" />
   <l:gentext key="moredocuments" text="更多文档" />
