--- a/suse2022-ns/common/l10n/it.xml
+++ b/suse2022-ns/common/l10n/it.xml
@@ -115,6 +115,7 @@
 
       <l:template name="intra-separator" text=", "/>
       <l:template name="intra-article" text="Articolo «%t»"/>
+      <l:template name="intra-appendix" text="Appendice «%t»"/>
       <l:template name="intra-book" text="Libro «%t»"/>
       <l:template name="intra-chapter" text="Capitolo %n «%t»"/>
       <l:template name="intra-sect1" text="Sezione&#160;%n «%t»"/>
