--- a/suse2022-ns/common/l10n/sv.xml
+++ b/suse2022-ns/common/l10n/sv.xml
@@ -88,6 +88,7 @@
 
       <l:template name="intra-separator" text=", "/>
       <l:template name="intra-article" text="Artikel ”%t”"/>
+      <l:template name="intra-appendix" text="Appendix ”%t”"/>
       <l:template name="intra-book" text="Bok ”%t”"/>
       <l:template name="intra-chapter" text="Kapitel&#160;%n ”%t”"/>
       <l:template name="intra-sect1" text="Section&#160;%n ”%t”"/>
