--- a/suse2022-ns/common/l10n/zh_tw.xml
+++ b/suse2022-ns/common/l10n/zh_tw.xml
@@ -214,6 +214,7 @@
      -->
     <l:template name="intra-separator" text=", "/>
     <l:template name="intra-article" text="《%t》文章"/>
+    <l:template name="intra-appendix" text="附录 %n 節「%t」"/>
     <l:template name="intra-book" text="《%t》"/>
     <l:template name="intra-chapter" text="第 %n 章「%t」"/>
     <l:template name="intra-sect1" text="第 %n 節「%t」"/>
