--- a/suse2022-ns/common/l10n/de.xml
+++ b/suse2022-ns/common/l10n/de.xml
@@ -103,6 +103,7 @@
 
       <l:template name="intra-separator" text=", "/>
       <l:template name="intra-article" text="Artikel „%t“"/>
+      <l:template name="intra-appendix" text="Anhang „%t“"/>
       <l:template name="intra-book" text="Buch „%t“"/>
       <l:template name="intra-chapter" text="Kapitel %n „%t“"/>
       <!--<l:template name="intra-part" text="%n „%t”"/>-->
