--- a/suse2022-ns/common/l10n/fr.xml
+++ b/suse2022-ns/common/l10n/fr.xml
@@ -105,6 +105,7 @@
 
       <l:template name="intra-separator" text=", "/>
       <l:template name="intra-article" text="Article «&#160;%t&#160;»"/>
+      <l:template name="intra-appendix" text="Annexe «&#160;%t&#160;»"/>
       <l:template name="intra-book" text="Manuel «&#160;%t&#160;»"/>
       <l:template name="intra-chapter" text="Chapitre %n «&#160;%t&#160;»"/>
       <l:template name="intra-sect1" text="Section&#160;%n «&#160;%t&#160;»"/>
