--- a/suse2022-ns/common/l10n/lt_lt.xml
+++ b/suse2022-ns/common/l10n/lt_lt.xml
@@ -98,6 +98,7 @@
 
       <l:template name="intra-separator" text=", "/>
       <l:template name="intra-article" text="Straipsnis „%t“"/>
+      <l:template name="intra-appendix" text="Priedas „%t“"/>
       <l:template name="intra-book" text="Knyga „%t“"/>
       <l:template name="intra-chapter" text="Skyrius&#160;%n „%t“"/>
       <l:template name="intra-sect1" text="Skyrius&#160;%n „%t“"/>
