--- a/suse2022-ns/common/l10n/ru.xml
+++ b/suse2022-ns/common/l10n/ru.xml
@@ -101,6 +101,7 @@
 
       <l:template name="intra-separator" text=", "/>
       <l:template name="intra-article" text="Статья «%t»"/>
+      <l:template name="intra-appendix" text="Приложение «%t»"/>
       <l:template name="intra-book" text="Книга «%t»"/>
       <l:template name="intra-chapter" text="Глава %n «%t»"/>
       <l:template name="intra-sect1" text="Раздел&#160;%n «%t»"/>
